<resources>
    <string name="app_name">Airbilinest</string>
    <string name="title_airbilinest">AirBiliNest</string>
    <string name="text_start">Mulai</string>
    <string name="text_aribilinest_1">Pencet Mulai Untuk Memulai</string>
    <string name="title_biliNorm">BiliNorm</string>
    <string name="title_about">Tentang</string>
    <string name="title_record">Rekam Data</string>
    <string name="text_about_1">
        AirBiliNest dari PT. Medika Karya Airlangga
        \n\n\nVisi:
        \n\nMenjadi perusahaan di era revolusi industri keempat sebagai penyedia peralatan kesehatan berbasis penelitian berkelanjutan dan penelitian inovatif.
        \n\nMisi:
        \n\nMemproduksi dan menyediakan produk-produk berkualitas tinggi dengan standar internasional, menawarkan kesempatan bagi sumber daya manusia
        yang kompeten untuk menciptakan karya-karya dalam negeri yang berkualitas. Kami bertujuan untuk menguasai pasar nasional dan internasional.
    </string>
    <string name="text_manual">
        Sistem Fototerapi Cerdas Airlangga Bilirubin Nesting atau yang biasa dikenal dengan AirBiliNest merupakan perangkat fototerapi portabel dengan dosis yang disesuaikan,
        yang ditujukan untuk meningkatkan kualitas layanan fototerapi bagi bayi hiperbilirubinemia yang memenuhi standar masyarakat saat ini.
    </string>
    <string name="text_settings">
        Pengaturan
    </string>
    <string name="text_faq">
        FaQ
    </string>
    <string name="text_useapp">
        Cara penggunaan aplikasi
    </string>
    <string name="text_abnmanual">
        Cara penggunaan AirBiliNest
    </string>
    <string name="title_apphelp">
        <b>Cara menggunakan aplikasi AirBiliNest</b>
    </string>
    <string name="text_apphelp_1">
        \nSaat pertama kali membuka aplikasi, Anda akan dihadapkan pada <u>Layar Utama AirBiliNest</u> yang memiliki tombol untuk membuka halaman kontrol -
        untuk mengontrol AirBiliNest Anda. Di bagian bawah aplikasi terdapat bilah navigasi.
    </string>
    <string name="text_apphelp_2">
        \n1. BiliNorm
        \n2. Platform
        \n3. AirBiliNest
        \n4. Rekam Data
        \n5. tentang kami dan pengaturan
        \n\n<b>1. BiliNorm </b>
    </string>
    <string name="text_apphelp_3">
        \nBBiliNorm merupakan aplikasi berbasis PWA yang terintegrasi dengan Pedoman Klinis Nasional Hiperbilirubinemia Neonatal Indonesia.
        Aplikasi ini bertujuan untuk membantu tenaga kesehatan dalam penanganan hiperbilirubinemia neonatal.
        \n\n<b>2. AirBiliNest</b>
    </string>
    <string name="text_apphelp_4">
        Di layar beranda terdapat tombol mulai untuk membuka halaman kontrol, Pastikan ponsel Anda sudah terhubung ke WiFi AirBiliNest,
        \n\nSSID\t\t\t\t\t: AirBiliNest_SN
        \nPassword\t: 123456789
        \n\nSetelah telepon Anda terhubung, Anda dapat mengakses halaman kontrol dengan mengeklik tombol.
        \n\nHalaman kontrol memiliki beberapa ikon seperti ini,
    </string>
    <string name="text_apphelp_5">
        \n1. Intensitas cahaya dalam Persentase
        \n2. Fungsi slider untuk mengontrol Intensitas LED
        \n3. Suhu sensor pada AirBiliNest
        \n4. Kelembapan sensor pada AirBiliNest
        \n5. Detak jantung per menit pasien pada sensor
        \n6. Saturasi oksigen pasien pada sensor
        \n7. Iradiasi cahaya biru dalam uW/cm^2/nm
        \n8. Berapa lama fototerapi telah berjalan*
        \n9. Tombol untuk mengatur ulang waktu
        \n10. Tombol untuk menyalakan atau mematikan alarm
        \n\n<i>*Waktu berjalan ketika lampu LED menyala, dan akan terhenti ketika lampu LED mati</i>
        \n\n<b>Peringatan</b>:
        \nKetika <u>suhu lebih tinggi dari 36°C</u> alarm akan menyala dan latar belakang akan berwarna merah,
        mohon untuk segera melakukan pengecekan pada bayi dan AirBiliNest, dan menurunkan intensitas atau mematikan sementara lampu fototerapi
        hingga suhu mencapai suhu yang aman.
        \n\n<b>3. Rekam Data</b>
    </string>
    <string name="text_apphelp_6">
        \nHalaman Rekam Data digunakan untuk merekan data pasien, tekan tombol <b>Tambah Pasien</b> untuk menambahkan pasien. Setelah itu anda dapat
        memasukan data pasien, seperti:
    </string>
    <string name="text_apphelp_7">
        \nSetelah selesai anda dapat menekan tombol <b>Simpan</b>, data dapat dibuka kembali pada halaman utama dengan menekan nama pasien
        . Gunakan tombol <b>Export ke Excel</b> untuk menyimpan data pasien dalam format excel (.xlsx) pada ponsel, file akan tersimpan pada folder
        <b>download/unduhan</b> dengan nama<b>PatientData.xlsx</b>, dan tombol <b>Hapus</b> untuk menghapus data pasien.
        on your <b>download</b> folder under the name <b>PatientData.xlsx</b>, and <b>Delete</b> button to delete the patient data.

        \n\n<b>4. Tentang</b>
        \nBerisi tentang profil perusahaan, dan beberapa fungsi seperti: Manual AirBiliNest, Cara menggunakan aplikasi, Pertanyaan yang sering diajukan (FaQs), dan Pengaturan
    </string>
    <string name="title_faq_1"><b>Pertanyaan yang sering diajukan (FaQ)</b></string>
    <string name="text_faq_1">
        \n<b>1. Tidak dapat membuka halaman kontrol AirBilinest</b>
        \n\nCek apakah ponsel anda sudah terhubung dengan WiFi AirBiliNest
        \nSSID\t\t\t\t\t: AirBiliNest
        \nPassword\t: 12345678
        \ndan matikan data ponse anda.
    </string>
    <string name="text_faq_2">
        \n<b>2. Dimana export excel data pasien tersimpan?</b>
        \n\nFile export excel data pasien tersimpan pada folder unduhan ponsel anda dengan nama file \'PatientData.xlsx\'.
    </string>
    <string name="text_faq_3">
        \n<b>3. Kenapa data export excel pasien tidak tersimpan pada ponsel saya?</b>
        \n\nMohon izinkan aplikasi untuk mengakses file pada saat anda pertama kali membuka aplikasi
    </string>
    <string name="text_faq_4">
        \n<b>4. Halaman BiliNorm tidak dapat terbuka</b>
        \n\nSaat pertama kali membuka halaman BiliNorm, mohon pastikan ponsel anda terhubung dengan data internet atau WiFi yang memiliki akses internet yang baik
    </string>
    <string name="text_faq_5">
        \n<b>5. Apakah ponsel saya harus selalu terkoneksi dengan WiFi AirBiliNest setiap waktu?</b>
        \n\nKetika fototerapi sedang dalam proses, direkomendasikan untuk selalu terkoneksi dengan WiFi AirBiliNest. Direkomendasikan untuk menggunakan ponsel khusus
        yang didedikasikan sebagai ponsel pengontrol AirBiliNest.
    </string>
    <string name="text_faq_6">
        \n<b>6. Bisakah saya mentransfer rekam data pasien dari satu ponsel ke ponsel yang lain?</b>
        \n\nFile ekstrak excel dapat dikirim ke ponsel lain, namun untuk memindahkan data pasien dari satu aplikasi AirBiliNest ke aplikasi AirBiliNest di ponse lain
        untuk saat ini belum tersedia.
    </string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="Manual_airbilinest">
        Klik untuk mendownload seri manual AirBiliNest
    </string>
    <string name="welcome">
        <b>Selamat Datang</b>
    </string>
    <string name="register_info">
        Login menggunakan akun airbilinest anda, jika belum ada silahkan lakukan registrasi terlebih dahulu.\n\n
        Untuk registrasi akun baru silahkan melakukan registrasi pada website airbilinest (<b>airbilineset.com</b>) dan masuk pada halaman profesional kesehatan
        dan lakukan registrasi akun baru.\n\n
    </string>
    <string name="remember_me">
        Ingat Saya
    </string>
    <string name="tryagain_btn">
        Coba Lagi
    </string>
    <string name="tryagain_text">
        Pastikan ponsel anda terhubung dengan WiFi AirBiliNest
    </string>
    <string name="text_addpatient">Tambah Pasien</string>
    <string name="text_exporttoexcel">Export ke Excel</string>
    <string name="patient_id">Patient ID</string>
    <string name="patient_name">Patient Name</string>
    <string name="patient_weight">Weight (gram)</string>
    <string name="patient_birth">Birth Date</string>
    <string name="date_choosen">Date Choosen:</string>
    <string name="bilirubin_start">Beginning Bilirubin (mg/dL)</string>
    <string name="phototherapy_duration">Phototherapy duration (hour)</string>
    <string name="phototherapy_intent">Phototherapy Intensity (uW/cm^2/nm)</string>
    <string name="bilirubin_ending">Ending Bilirubin (mg/dL)</string>
    <string name="save">save</string>
    <string name="language">Bahasa</string>
    <string name="select_language">Pilih Bahasa</string>
    <string name="english">Inggris</string>
    <string name="indonesian">Indonesia</string>
</resources>