<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="70dp"
    android:layout_marginBottom="100dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="729dp"
        android:background="#FFF"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="80dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="15dp"
                android:text="@string/patient_id"/>

            <EditText
                android:id="@+id/patientId"
                android:hint="Patient ID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="15dp"
                android:text="@string/patient_name"/>

            <EditText
                android:id="@+id/patientName"
                android:hint="@string/patient_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="15dp"
                android:text="@string/patient_weight"/>

            <EditText
                android:id="@+id/weight"
                android:hint="@string/patient_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="20dp"
                android:text="@string/patient_birth"/>

            <DatePicker
                android:id="@+id/birthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <TextView
                android:id="@+id/birthdateshow"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="20dp"
                android:text="@string/date_choosen"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="15dp"
                android:text="@string/bilirubin_start"/>

            <EditText
                android:id="@+id/bilirubinStart"
                android:hint="Bilirubin (mg/dL)"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="15dp"
                android:text="@string/phototherapy_duration"/>

            <EditText
                android:id="@+id/lengthOfPhototherapy"
                android:hint="@string/phototherapy_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="15dp"
                android:text="@string/phototherapy_intent"/>

            <EditText
                android:id="@+id/phototherapyIntensity"
                android:hint="@string/phototherapy_intent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:textSize="15dp"
                android:text="@string/bilirubin_ending"/>

            <EditText
                android:id="@+id/bilirubinEnd"
                android:hint="@string/bilirubin_ending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

            <Button
                android:id="@+id/saveButton"
                android:text="@string/save"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="110dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>