<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/setting_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="40dp"
            android:textSize="20dp"
            android:text="@string/language" />

        <TextView
            android:id="@+id/textSettings"
            android:layout_below="@+id/setting_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="4dp"
            android:text="@string/select_language" />

        <RadioGroup
            android:id="@+id/languageRadioGroup"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="4dp"
            android:layout_below="@+id/textSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/englishRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/english" />

            <RadioButton
                android:id="@+id/indonesianRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/indonesian" />
        </RadioGroup>

        <View
            android:id="@+id/lineTextSettings"
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:layout_below="@+id/languageRadioGroup"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="50dp"
            android:background="@android:color/darker_gray"
            android:scaleType="centerInside" />

    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>