<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/titleFaQ_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="40dp"
                android:textSize="22dp"
                android:justificationMode="inter_word"
                android:text="@string/title_faq_1" />

            <TextView
                android:id="@+id/textFaQ_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="40dp"
                android:justificationMode="inter_word"
                android:layout_below="@id/titleFaQ_1"
                android:text="@string/text_faq_1" />

            <TextView
                android:id="@+id/textFaQ_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="10dp"
                android:justificationMode="inter_word"
                android:layout_below="@id/textFaQ_1"
                android:text="@string/text_faq_2" />

            <TextView
                android:id="@+id/textFaQ_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="10dp"
                android:justificationMode="inter_word"
                android:layout_below="@id/textFaQ_2"
                android:text="@string/text_faq_3" />

            <TextView
                android:id="@+id/textFaQ_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="10dp"
                android:justificationMode="inter_word"
                android:layout_below="@id/textFaQ_3"
                android:text="@string/text_faq_4" />

            <TextView
                android:id="@+id/textFaQ_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="10dp"
                android:justificationMode="inter_word"
                android:layout_below="@id/textFaQ_4"
                android:text="@string/text_faq_5" />

            <TextView
                android:id="@+id/textFaQ_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_gravity="center_horizontal|center"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="80dp"
                android:justificationMode="inter_word"
                android:layout_below="@id/textFaQ_5"
                android:text="@string/text_faq_6" />

        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>